# raptors-core

./: Cargo.toml  README.md
raptors-core/: Cargo.toml  build.rs  cbindgen.toml
raptors-core/benches/: array_creation.rs  common.rs  indexing.rs  operations.rs
raptors-core/examples/: advanced_operations.rs  basic_usage.rs
raptors-core/src/: lib.rs
raptors-core/src/array/: arrayobject.rs  builder.rs  creation.rs  flags.rs  iter_ops.rs  mod.rs  subclassing.rs
raptors-core/src/broadcasting/: broadcast.rs
raptors-core/src/buffer/: buffer.rs  format.rs  mod.rs
raptors-core/src/concatenation/: concatenate.rs
raptors-core/src/conversion/: casting.rs
raptors-core/src/datetime/: arithmetic.rs  datetime.rs  dtype.rs  mod.rs  parsing.rs
raptors-core/src/dlpack/: interop.rs  mod.rs
raptors-core/src/einsum/: contract.rs  mod.rs  parser.rs  path.rs
raptors-core/src/ffi/: array_api.rs  concatenation.rs  conversion.rs  einsum.rs  indexing.rs  io.rs  manipulation.rs  mod.rs  operations.rs  sorting.rs  views.rs
raptors-core/src/indexing/: indexing.rs  mod.rs  slicing.rs
raptors-core/src/io/: mod.rs  npy.rs  text.rs
raptors-core/src/iterators/: iterator.rs  mod.rs
raptors-core/src/linalg/: mod.rs
raptors-core/src/manipulation/: rotate.rs  tile.rs
raptors-core/src/masked/: access.rs  operations.rs
raptors-core/src/memmap/: io.rs  (+3 more)
raptors-core/tests/: advanced_ufunc_test.rs  broadcasting_test.rs  creation_test.rs  datetime_test.rs  dlpack_test.rs  ffi_test.rs  indexing_test.rs  integration_test.rs  io_test.rs  iterator_test.rs  linalg_test.rs  manipulation_test.rs  masked_test.rs  memmap_test.rs  memory_layout_test.rs  numpy_compat_test.rs  numpy_port_broadcasting_test.rs  numpy_port_creation_test.rs  numpy_port_datetime_test.rs  numpy_port_dtype_test.rs  numpy_port_helpers_test.rs  numpy_port_indexing_test.rs  numpy_port_linalg_test.rs  numpy_port_masked_test.rs  numpy_port_operations_test.rs  numpy_port_reduction_test.rs  numpy_port_shape_test.rs  numpy_port_string_test.rs  numpy_port_structured_test.rs  numpy_port_ufunc_test.rs  performance_test.rs  reduction_test.rs  refcount_test.rs  sorting_test.rs  statistics_test.rs  string_test.rs  subclassing_test.rs  text_io_test.rs  threading_test.rs  user_defined_test.rs  (+1 more)
raptors-python/: .pypirc.example  BUILD.md  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  TESTING.md  build.rs  pyproject.toml  pytest.ini  run_tests.sh  setup_test_env.sh
raptors-python/examples/: basic_usage.py  numpy_interop.py
raptors-python/src/: array.rs  dtype.rs  iterators.rs  lib.rs  numpy_interop.rs  ufunc.rs
raptors-python/tests/: README.md  array_test.rs  conftest.py  dtype_test.rs  iterator_test.rs  test_array.py  test_dtype.py  test_numpy_interop.py  test_ufunc.py  ufunc_test.rs
(+164 files in other folders)
