[package]
name = "raptors-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "raptors_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2"
bitflags = "2.10"
memmap2 = "0.9"
rayon = "1.8"

[build-dependencies]
cbindgen = "0.29"

[dev-dependencies]
cc = "1.0"
criterion = "0.5"

[[bench]]
name = "array_creation"
harness = false

[[bench]]
name = "operations"
harness = false

[[bench]]
name = "indexing"
harness = false

