[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "raptors"
version = "0.1.0"
description = "A Rust implementation of NumPy's C/C++ core with Python bindings"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Raptors Contributors"}
]
keywords = ["numpy", "array", "scientific-computing", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/your-org/raptors"
Documentation = "https://github.com/your-org/raptors#readme"
Repository = "https://github.com/your-org/raptors"
Issues = "https://github.com/your-org/raptors/issues"

[tool.maturin]
features = []
# Bindings type is automatically detected from Cargo.toml
# module-name = "raptors"  # Already set in Cargo.toml

[tool.maturin.sdist]
include = [
    "Cargo.toml",
    "src/**/*",
    "pyproject.toml",
    "README.md",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pytest.PytestRemovedIn9Warning",
]

